tests/fixtures/invalid/pow_int_bytes_int.py
# Cannot call pow() with Int, Bytes, Int
x = pow(1, b"hello", 1)
